--- a/HttpJson/indexEn.html
+++ b/HttpJson/indexEn.html
@@ -4,114 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>插件节点使用指南 - 参数详解</title>
-  <style>
-    /* 核心风格：暗色背景，浅色文字 */
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background-color: #1a1a1d;
-      color: #dcdcdc;
-      font-size: 15px;
-    }
-
-    .container {
-      max-width: 1000px;
-      margin: 40px auto;
-      padding: 30px;
-      background-color: #242429;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
-      border-radius: 8px;
-    }
-
-    h1 {
-      color: #4CAF50;
-      text-align: center;
-      font-size: 2.2em;
-      padding-bottom: 15px;
-      margin-bottom: 30px;
-      border-bottom: 1px solid #3a3a40;
-    }
-
-    h2 {
-      color: #00bcd4;
-      margin-top: 50px;
-      font-size: 1.5em;
-      padding-left: 15px;
-      border-left: 4px solid #00bcd4;
-      margin-bottom: 20px;
-    }
-
-    .case-section {
-      margin-bottom: 40px;
-      padding: 25px;
-      border: 1px solid #333;
-      border-radius: 6px;
-      background-color: #2c2c31;
-      transition: box-shadow 0.3s;
-    }
-
-    .case-section:hover {
-      box-shadow: 0 0 15px rgba(0, 188, 212, 0.4);
-    }
-
-    .case-image {
-      width: auto;
-      height: 360px;
-      border-radius: 4px;
-      margin: auto;
-      display: block;
-      border: 1px solid #444;
-    }
-
-    code {
-      background-color: #38383e;
-      color: #ff9800;
-      padding: 3px 6px;
-      border-radius: 4px;
-      font-family: Consolas, monospace;
-      font-weight: normal;
-    }
-
-    /* 表格样式：用于参数说明 */
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin: 20px 0;
-      font-size: 0.9em;
-    }
-
-    th,
-    td {
-      padding: 12px 15px;
-      text-align: left;
-      border-bottom: 1px solid #3a3a40;
-    }
-
-    th {
-      background-color: #333;
-      color: #00bcd4;
-      text-transform: uppercase;
-    }
-
-    tr:hover {
-      background-color: #333;
-    }
-
-    .input-param {
-      color: #4CAF50;
-      /* 绿色表示输入 */
-      font-weight: bold;
-    }
-
-    .output-param {
-      color: #f39c12;
-      /* 橙色表示输出 */
-      font-weight: bold;
-    }
-  </style>
+  <title>Plugin Node User Guide - Parameter Details</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -165,7 +59,8 @@
             <td class="input-param">Post Data</td>
             <td>String</td>
             <td>Used to carry the request body content (Payload), typically a JSON string, when the
-              <code>Request Type</code> is POST or PUT.</td>
+              <code>Request Type</code> is POST or PUT.
+            </td>
           </tr>
           <tr>
             <td class="input-param">Timeout</td>
@@ -509,7 +404,8 @@
             <td class="input-param">Path</td>
             <td>String</td>
             <td>**Required:** The JSON path expressed using dot notation. For example, to get the name from
-              <code>{"user": {"info": {"name": "Test"}}}</code>, the Path should be `user.info.name`.</td>
+              <code>{"user": {"info": {"name": "Test"}}}</code>, the Path should be `user.info.name`.
+            </td>
           </tr>
         </tbody>
       </table>
@@ -589,7 +485,8 @@
             <td>Path To Array (Bottom row)</td>
             <td>String</td>
             <td>**Required:** The JSON Path using dot notation, pointing to the location of the target array (e.g.,
-              <code>data.scores.list</code>).</td>
+              <code>data.scores.list</code>).
+            </td>
           </tr>
         </tbody>
       </table>
